--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>dork</title>
+  <title>$dork</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -33,16 +33,13 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">$dork</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#one" class="active">one</a></li>
-          <li><a href="#two">two</a></li>
-          <li><a href="#three">three</a></li>
+          <li><a href="https://x.com/dorkcto" class="active">X Profile</a></li>
+          <li><a href="https://t.me/DORKCTOPORTAL">The $dork Community</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -91,33 +88,33 @@
             <div class="col-xl-3 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-1-square"></i></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Create a Wallet</a></h4>
-                <p>Download phantom or wallet app of your choice from the app store or google play store for free.</p>
+                <h4 class="title"><a href="https://phantom.app/" target="_blank" class="stretched-link">Create a Wallet</a></h4>
+                <p>Download the Phantom wallet or any wallet app of your choice for free from the App Store or Google Play Store.</p>
               </div>
             </div><!--End Icon Box -->
 
             <div class="col-xl-3 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-2-square"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Get some SOL
+                <h4 class="title"><a href="https://www.binance.com/en-GB/crypto/buy/USD/SOL" target="_blank" class="stretched-link">Get some SOL
                 </a></h4>
-                <p>Have SOL in your wallet to swap to $dork. If you don’t have any SOL, you can buy on another exchange and send it to your wallet.</p>
+                <p>Make sure you have SOL in your wallet to swap for $dork. If you don't have any SOL, you can purchase it on another exchange and transfer it to your wallet.</p>
               </div>
             </div><!--End Icon Box -->
 
             <div class="col-xl-3 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-3-square"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Go to Raydium</a></h4>
-                <p>Go to Raydium. Connect your wallet and paste the $dork token address into Raydium, select dork, and confirm. When your wallet prompts you for a wallet signature, sign.</p>
+                <h4 class="title"><a href="https://raydium.io/swap/?inputMint=sol&outputMint=2Hj45C2bjvszU3kGvPf6uc1Ui1f4wj4QMEMWmfexpump" target="_blank" class="stretched-link">Go to Raydium</a></h4>
+                <p>Go to Raydium, connect your wallet, and paste the $dork token address into the platform. Select 'dork' and confirm the transaction. When your wallet prompts you to sign, provide your signature.</p>
               </div>
             </div><!--End Icon Box -->
 
             <div class="col-xl-3 col-md-6">
               <div class="icon-box">
                 <div class="icon"><i class="bi bi-4-square"></i></div>
-                <h4 class="title"><a href="" class="stretched-link">Swap SOL for $dork</a></h4>
-                <p>Swap SOL for $dork. We have ZERO taxes so you don’t need to worry about buying with a specific slippage, although you may need to use slippage during times of market volatility.</p>
+                <h4 class="title"><a href="https://raydium.io/swap/?inputMint=sol&outputMint=2Hj45C2bjvszU3kGvPf6uc1Ui1f4wj4QMEMWmfexpump" target="_blank" class="stretched-link">Swap for $dork</a></h4>
+                <p>Swap SOL for $dork. There are no taxes, so you don't need to worry about buying with a specific slippage. However, you may need to adjust slippage during times of market volatility.</p>
               </div>
             </div><!--End Icon Box -->
 
@@ -134,6 +131,9 @@
   <footer id="footer" class="footer light-background">
 
     <div class="container">
+      <div class="copyright text-center" style="font-size: x-small;">
+        <p>$dork is a memecoin with no intrinsic value or expectation of financial return. There is no formal team or roadmap. The token is completely useless and for entertainment purposes only.</p>
+      </div>
       <div class="copyright text-center ">
         <p>© 2024 <span>by</span><strong class="px-1 sitename">$dork</strong> <span>All Rights Reserved</span></p>
       </div>
@@ -141,6 +141,7 @@
         <a href="https://x.com/dorkcto"><i class="bi bi-twitter-x"></i></a>
         <a href="https://t.me/DORKCTOPORTAL"><i class="bi bi-telegram"></i></a>
       </div>
+
     </div>
 
   </footer>
