--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row gy-5">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
             <h2>$dork</h2>
-            <p>The memecoin that’s literally thumbthing you didn’t know you needed! Dork is your favorite nerdy thumb rocking glasses, ready to bring all the laughs, memes, and vibes to the crypto space. We’re here to prove that taking life seriously is overrated—every meme, every laugh, and every share makes Dork’s value grow. Hop on the meme train, join the Dork squad, and let’s get weird together in a crypto adventure that’s as quirky as your last bad joke! #StayDorky</p>
+            <p>That’s literally thumbthing you didn’t know you needed! Dork is your favorite nerdy thumb rocking glasses, ready to bring all the laughs, memes, and vibes to the crypto space. We’re here to prove that taking life seriously is overrated—every meme, every laugh, and every share makes Dork’s value grow. Hop on the meme train, join the Dork squad, and let’s get weird together in a crypto adventure that’s as quirky as your last bad joke! #StayDorky</p>
             <div class="contract-div">
               <div class="contract-address" id="contractAddressShort">2Hj45C2bjvszU3kGvPf6uc1Ui1f4...</div>
               <button class="copy-btn" onclick="copyToClipboard()" id="copyButton">
