--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <p>$dork is a memecoin with no intrinsic value or expectation of financial return. There is no formal team or roadmap. The token is completely useless and for entertainment purposes only.</p>
       </div>
       <div class="copyright text-center ">
-        <p>© 2024 <span>by</span><strong class="px-1 sitename">$dork</strong> <span>All Rights Reserved</span></p>
+        <p>© <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script> <span>by</span><strong class="px-1 sitename">$dork</strong>- <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://x.com/dorkcto"><i class="bi bi-twitter-x"></i></a>
