--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <div class="container">
       <div class="copyright text-center" style="font-size: x-small;">
-        <p>$dork is a memecoin with no intrinsic value or expectation of financial return. There is no formal team or roadmap. The token is completely useless and for entertainment purposes only.</p>
+        <p>$dork is a memecoin with no intrinsic value or expectation of financial return. There is no formal team or roadmap. The token is useless and for entertainment purposes only.</p>
       </div>
       <div class="copyright text-center ">
         <p>© <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script> <span>by</span><strong class="px-1 sitename">$dork</strong>- <span>All Rights Reserved</span></p>
