--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>$dork</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <!-- Primary Meta Tags -->
+<title>$dork</title>
+<meta name="title" content="$dork" />
+<meta name="description" content="Dork is your nerdy thumb with glasses, bringing laughs, memes, and vibes to crypto. Join the squad and let's get weird together! #StayDorky" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://https://dorktoken.com" />
+<meta property="og:title" content="$dork" />
+<meta property="og:description" content="Dork is your nerdy thumb with glasses, bringing laughs, memes, and vibes to crypto. Join the squad and let's get weird together! #StayDorky" />
+<meta property="og:image" content="https://dorktoken.com/assets/img/tag.jpg" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="image" />
+<meta property="twitter:url" content="https://https://dorktoken.com" />
+<meta property="twitter:title" content="$dork" />
+<meta property="twitter:description" content="Dork is your nerdy thumb with glasses, bringing laughs, memes, and vibes to crypto. Join the squad and let's get weird together! #StayDorky" />
+<meta property="twitter:image" content="https://dorktoken.com/assets/img/tag.jpg" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
