--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <meta property="og:image" content="https://dorktoken.com/assets/img/tag.jpg" />
 
 <!-- Twitter -->
-<meta property="twitter:card" content="image" />
+<meta property="twitter:card" content="summary" />
 <meta property="twitter:url" content="https://https://dorktoken.com" />
 <meta property="twitter:title" content="$dork" />
 <meta property="twitter:description" content="Dork is your nerdy thumb with glasses, bringing laughs, memes, and vibes to crypto. Join the squad and let's get weird together! #StayDorky" />
