--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
           <div class="d-flex">
               <a href="https://x.com/dorkcto"><img src="/assets/img/x.png" height="64px"></img></a>
               <a href="https://t.me/DORKCTOPORTAL"><img src="/assets/img/tg.png" height="64"></img></a>
-              <a href="https://www.dextools.io/app/en/solana/pair-explorer/DwUF2eh49e7ey91q76FvwvLSn9tNKPkk1zCxh8iVCmj5?t=1731226522971"><img src="/assets/img/dext.png" height="64"></img></a>
-              <a href="https://dexscreener.com/solana/dwuf2eh49e7ey91q76fvwvlsn9tnkpkk1zcxh8ivcmj5
-              "><img src="/assets/img/dexs.png" height="64"></img></a>
-              <a href="https://raydium.io/swap/?inputMint=sol&outputMint=2Hj45C2bjvszU3kGvPf6uc1Ui1f4wj4QMEMWmfexpump"><img src="/assets/img/ray.png" height="64"></img></a>
-              
+              <a href="https://instagram.com/dorksol"><img src="/assets/img/ig.png" height="64"></img></a>
             </div>
+            <div class="d-flex">
+            <a href="https://www.dextools.io/app/en/solana/pair-explorer/DwUF2eh49e7ey91q76FvwvLSn9tNKPkk1zCxh8iVCmj5?t=1731226522971"><img src="/assets/img/dext.png" height="64"></img></a>
+            <a href="https://dexscreener.com/solana/dwuf2eh49e7ey91q76fvwvlsn9tnkpkk1zcxh8ivcmj5"><img src="/assets/img/dexs.png" height="64"></img></a>
+            <a href="https://raydium.io/swap/?inputMint=sol&outputMint=2Hj45C2bjvszU3kGvPf6uc1Ui1f4wj4QMEMWmfexpump"><img src="/assets/img/ray.png" height="64"></img></a>  
+          </div>
           </div>
           <div class="col-lg-6 order-1 order-lg-2">
             <img src="assets/img/dork.png" class="img-fluid" alt="">
@@ -157,6 +158,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href="https://x.com/dorkcto"><i class="bi bi-twitter-x"></i></a>
         <a href="https://t.me/DORKCTOPORTAL"><i class="bi bi-telegram"></i></a>
+        <a href="https://instagram.com/dorksol"><i class="bi bi-instagram"></i></a>
       </div>
 
     </div>
